<?xml version="1.0"?>
<package format="3">
	<name>aruco_interfaces</name>
	<version>0.1.0</version>
	<description>Aruco Marker Tracking and Pose Estimation messages interfaces for ROS2</description>
	<maintainer email="hong091788@naver.com">Jihyeon</maintainer>
	<license>Apache 2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>geometry_msgs</depend>
	<depend>std_msgs</depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<build_depend>rosidl_default_generators</build_depend>

	<exec_depend>rosidl_default_runtime</exec_depend>

	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>